# Aegis

./: # Quantum-Secure Terminal Chat System - .md  Cargo.toml  README.md  SECURITY.md  STATUS.md
benches/: crypto_bench.rs  network_bench.rs
scripts/: install_prereqs.sh
src/: lib.rs  main.rs  session.rs
src/crypto/: kdf.rs  kyber.rs  mod.rs  random.rs  ratchet.rs  symmetric.rs  timing.rs
src/network/: connection.rs  mod.rs  peer.rs  protocol.rs
src/security/: mod.rs  replay.rs
src/storage/: ephemeral.rs  mod.rs
src/ui/: mod.rs  status.rs  terminal.rs
tests/: integration_test.rs
