[package]
name = "aegis"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Contributors"]
description = "Quantum-secure terminal chat system with rotating keys and end-to-end encryption"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/aegis"
keywords = ["encryption", "quantum-resistant", "chat", "security", "terminal"]
categories = ["cryptography", "command-line-utilities", "network-programming"]

[lib]
name = "aegis"
path = "src/lib.rs"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Symmetric encryption
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Key derivation and hashing
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
hmac = "0.12"

# Random number generation
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"

# Async runtime and networking
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.1"

# TLS certificates
rcgen = "0.13"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Memory security
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono = "0.4"

# Utilities
bytes = "1.7"
hex = "0.4"
base64 = "0.22"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
